--- a/backend/Admin_GMC/templates/admin/admin_sales.html
+++ b/backend/Admin_GMC/templates/admin/admin_sales.html
@@ -463,7 +463,9 @@
                   drawBorder: false
                 },
                 ticks: {
-                  font: { size: 11 }
+                  font: { size: 11 },
+                  maxRotation: 45,
+                  minRotation: 45
                 }
               }
             },
